--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <a class="header_nav-link" href="">Оставить заявку</a>
         </nav>
 
+
     </header>
     <section class="main">
         <div class="container">
@@ -72,7 +73,8 @@
                         Вид работы: Комплектация продовольственных товаров (сбор заказов на магазины) с помощью наушника
                         (войс)
                         Возможна работа в холодном отделении +8С
-                        З / П от 13,40 до 26 злотых / час (аккорд) З/П зависит от количества сделанных заказов и скорости
+                        З / П от 13,40 до 26 злотых / час (аккорд) З/П зависит от количества сделанных заказов и
+                        скорости
                         выполнения.
                         До 26 лет + 1зл / ч
                         График работы: С вс-пн по 8-12 часов
@@ -91,7 +93,8 @@
                         Вид работы: Комплектация продовольственных товаров (сбор заказов на магазины) с помощью наушника
                         (войс)
                         Возможна работа в холодном отделении +8С
-                        З / П от 13,40 до 26 злотых / час (аккорд) З/П зависит от количества сделанных заказов и скорости
+                        З / П от 13,40 до 26 злотых / час (аккорд) З/П зависит от количества сделанных заказов и
+                        скорости
                         выполнения.
                         До 26 лет + 1зл / ч
                         График работы: С вс-пн по 8-12 часов
@@ -159,7 +162,102 @@
                 </div>
             </div>
         </div>
-        
+        <div class="mobile_vacansies">
+            <div class="mobile_vacansies_item">
+                <img src="/img/stokrotka.png" alt="">
+                <p class="mobile_vacansies-title">stokrotka</p>
+                <p class="mobile_vacansies-subtitle">Teresin, Psary</p>
+                <p class="mobile_vacansies-description">Вид работы: Комплектация продовольственных товаров (сбор заказов
+                    на магазины) с помощью электрических вузиков и сканера.
+                    Возможна работа в холодном отделении +8С
+                    З / П от 13,65 до 23 злотых / час (аккорд) в зависимости от количества сделанных заказов и
+                    скорости выполнения
+                    До 26 лет + 1зл / ч
+                    График работы: С вс-пн по 8-12 часов
+                    График может меняться в зависимости от количества заказов. выходной суббота
+                    Требования: парни, девушки, семейные пары до 35 лет.
+                    Визы от 4-х месяцев, биометрия (полная), карты побыта
+                    Условия: проживание бесплатное, семейные пары живут отдельно, возможно 2 пары в одной комнате
+                    Проезд организован к работе, 100 злотых / месяц
+                    Одежда: ботинки и каска высчитывают с первой зп</p>
+            </div>
+            <div class="mobile_vacansies_item">
+                <img src="/img/EUROCASH-logo.png" alt="">
+                <p class="mobile_vacansies-title">Eurocash</p>
+                <p class="mobile_vacansies-subtitle">Kraków, Stargard, Wrocław,</p>
+                <p class="mobile_vacansies-description">
+                    Вид работы: Комплектация продовольственных товаров (сбор заказов на магазины) с помощью наушника
+                    (войс)
+                    Возможна работа в холодном отделении +8С
+                    З / П от 13,40 до 26 злотых / час (аккорд) З/П зависит от количества сделанных заказов и скорости
+                    выполнения.
+                    До 26 лет + 1зл / ч
+                    График работы: С вс-пн по 8-12 часов
+                    График может меняться в зависимости от количества заказов. выходной суббота
+                    Требования: парни, девушки, семейные пары до 35 лет.
+                    Визы от 4-х месяцев, биометрия (по договоренности), карты побыта
+                    Условия: проживание бесплатное, семейные пары живут отдельно, возможно 2 пары в одной комнате
+                    Проезд организован к работе, 100 злотых / месяц
+                    Одежда: ботинки и каска высчитывают с первой зп</p>
+            </div>
+            <div class="mobile_vacansies_item">
+                <img src="/img/eurocash.png" alt="">
+                <p class="mobile_vacansies-title">Eurocash</p>
+                <p class="mobile_vacansies-subtitle">Sosnowiec, Błonie</p>
+                <p class="mobile_vacansies-description">
+                    Вид работы: Комплектация продовольственных товаров (сбор заказов на магазины) с помощью наушника
+                    (войс)
+                    Возможна работа в холодном отделении +8С
+                    З / П от 13,40 до 26 злотых / час (аккорд) З/П зависит от количества сделанных заказов и скорости
+                    выполнения.
+                    До 26 лет + 1зл / ч
+                    График работы: С вс-пн по 8-12 часов
+                    График может меняться в зависимости от количества заказов. выходной суббота
+                    Требования: парни, девушки, семейные пары до 35 лет.
+                    Визы от 4-х месяцев, биометрия (по договоренности), карты побыта
+                    Условия: проживание бесплатное, семейные пары живут отдельно, возможно 2 пары в одной комнате
+                    Проезд организован к работе, 100 злотых / месяц
+                    Одежда: ботинки и каска высчитывают с первой зп
+                </p>
+            </div>
+            <div class="mobile_vacansies_item">
+                <img src="/img/stokrotka.png" alt="">
+                <p class="mobile_vacansies-title">stokrotka</p>
+                <p class="mobile_vacansies-subtitle">Teresin, Psary</p>
+                <p class="mobile_vacansies-description">Вид работы: Комплектация продовольственных товаров (сбор заказов
+                    на магазины) с помощью электрических вузиков и сканера.
+                    Возможна работа в холодном отделении +8С
+                    З / П от 13,65 до 23 злотых / час (аккорд) в зависимости от количества сделанных заказов и
+                    скорости выполнения
+                    До 26 лет + 1зл / ч
+                    График работы: С вс-пн по 8-12 часов
+                    График может меняться в зависимости от количества заказов. выходной суббота
+                    Требования: парни, девушки, семейные пары до 35 лет.
+                    Визы от 4-х месяцев, биометрия (полная), карты побыта
+                    Условия: проживание бесплатное, семейные пары живут отдельно, возможно 2 пары в одной комнате
+                    Проезд организован к работе, 100 злотых / месяц
+                    Одежда: ботинки и каска высчитывают с первой зп</p>
+            </div>
+            <div class="mobile_vacansies_item">
+                <img src="/img/stokrotka.png" alt="">
+                <p class="mobile_vacansies-title">stokrotka</p>
+                <p class="mobile_vacansies-subtitle">Teresin, Psary</p>
+                <p class="mobile_vacansies-description">Вид работы: Комплектация продовольственных товаров (сбор заказов
+                    на магазины) с помощью электрических вузиков и сканера.
+                    Возможна работа в холодном отделении +8С
+                    З / П от 13,65 до 23 злотых / час (аккорд) в зависимости от количества сделанных заказов и
+                    скорости выполнения
+                    До 26 лет + 1зл / ч
+                    График работы: С вс-пн по 8-12 часов
+                    График может меняться в зависимости от количества заказов. выходной суббота
+                    Требования: парни, девушки, семейные пары до 35 лет.
+                    Визы от 4-х месяцев, биометрия (полная), карты побыта
+                    Условия: проживание бесплатное, семейные пары живут отдельно, возможно 2 пары в одной комнате
+                    Проезд организован к работе, 100 злотых / месяц
+                    Одежда: ботинки и каска высчитывают с первой зп</p>
+            </div>
+        </div>
+
     </section>
     <section class="map">
 
@@ -194,7 +292,7 @@
             <div class="cooperation_wrapper-item">
                 <img src="/img/bedrionka.png" alt="">
             </div>
-    
+
             <div class="cooperation_wrapper-item">
                 <img src="/img/netto.png" alt="">
             </div>
