--- a/index.html
+++ b/index.html
@@ -24,12 +24,16 @@
         </div>
         <nav class="header_nav">
             <a class="header_nav-link" href="">Google Map</a>
-            <a class="header_nav-link" href="">Контакты</a>
+            <a class="header_nav-link" id="contacts" href="">Контакты
+                <div class="contacts_menu">
+                    <p class="">viber</p>
+                    <p class="">telegram</p>
+                    <p class="">fb</p>
+                </div>
+            </a>
             <a class="header_nav-link" href="">О нас</a>
             <a class="header_nav-link" href="">Оставить заявку</a>
         </nav>
-
-
     </header>
     <section class="main">
         <div class="container">
@@ -162,102 +166,7 @@
                 </div>
             </div>
         </div>
-        <div class="mobile_vacansies">
-            <div class="mobile_vacansies_item">
-                <img src="/img/stokrotka.png" alt="">
-                <p class="mobile_vacansies-title">stokrotka</p>
-                <p class="mobile_vacansies-subtitle">Teresin, Psary</p>
-                <p class="mobile_vacansies-description">Вид работы: Комплектация продовольственных товаров (сбор заказов
-                    на магазины) с помощью электрических вузиков и сканера.
-                    Возможна работа в холодном отделении +8С
-                    З / П от 13,65 до 23 злотых / час (аккорд) в зависимости от количества сделанных заказов и
-                    скорости выполнения
-                    До 26 лет + 1зл / ч
-                    График работы: С вс-пн по 8-12 часов
-                    График может меняться в зависимости от количества заказов. выходной суббота
-                    Требования: парни, девушки, семейные пары до 35 лет.
-                    Визы от 4-х месяцев, биометрия (полная), карты побыта
-                    Условия: проживание бесплатное, семейные пары живут отдельно, возможно 2 пары в одной комнате
-                    Проезд организован к работе, 100 злотых / месяц
-                    Одежда: ботинки и каска высчитывают с первой зп</p>
-            </div>
-            <div class="mobile_vacansies_item">
-                <img src="/img/EUROCASH-logo.png" alt="">
-                <p class="mobile_vacansies-title">Eurocash</p>
-                <p class="mobile_vacansies-subtitle">Kraków, Stargard, Wrocław,</p>
-                <p class="mobile_vacansies-description">
-                    Вид работы: Комплектация продовольственных товаров (сбор заказов на магазины) с помощью наушника
-                    (войс)
-                    Возможна работа в холодном отделении +8С
-                    З / П от 13,40 до 26 злотых / час (аккорд) З/П зависит от количества сделанных заказов и скорости
-                    выполнения.
-                    До 26 лет + 1зл / ч
-                    График работы: С вс-пн по 8-12 часов
-                    График может меняться в зависимости от количества заказов. выходной суббота
-                    Требования: парни, девушки, семейные пары до 35 лет.
-                    Визы от 4-х месяцев, биометрия (по договоренности), карты побыта
-                    Условия: проживание бесплатное, семейные пары живут отдельно, возможно 2 пары в одной комнате
-                    Проезд организован к работе, 100 злотых / месяц
-                    Одежда: ботинки и каска высчитывают с первой зп</p>
-            </div>
-            <div class="mobile_vacansies_item">
-                <img src="/img/eurocash.png" alt="">
-                <p class="mobile_vacansies-title">Eurocash</p>
-                <p class="mobile_vacansies-subtitle">Sosnowiec, Błonie</p>
-                <p class="mobile_vacansies-description">
-                    Вид работы: Комплектация продовольственных товаров (сбор заказов на магазины) с помощью наушника
-                    (войс)
-                    Возможна работа в холодном отделении +8С
-                    З / П от 13,40 до 26 злотых / час (аккорд) З/П зависит от количества сделанных заказов и скорости
-                    выполнения.
-                    До 26 лет + 1зл / ч
-                    График работы: С вс-пн по 8-12 часов
-                    График может меняться в зависимости от количества заказов. выходной суббота
-                    Требования: парни, девушки, семейные пары до 35 лет.
-                    Визы от 4-х месяцев, биометрия (по договоренности), карты побыта
-                    Условия: проживание бесплатное, семейные пары живут отдельно, возможно 2 пары в одной комнате
-                    Проезд организован к работе, 100 злотых / месяц
-                    Одежда: ботинки и каска высчитывают с первой зп
-                </p>
-            </div>
-            <div class="mobile_vacansies_item">
-                <img src="/img/stokrotka.png" alt="">
-                <p class="mobile_vacansies-title">stokrotka</p>
-                <p class="mobile_vacansies-subtitle">Teresin, Psary</p>
-                <p class="mobile_vacansies-description">Вид работы: Комплектация продовольственных товаров (сбор заказов
-                    на магазины) с помощью электрических вузиков и сканера.
-                    Возможна работа в холодном отделении +8С
-                    З / П от 13,65 до 23 злотых / час (аккорд) в зависимости от количества сделанных заказов и
-                    скорости выполнения
-                    До 26 лет + 1зл / ч
-                    График работы: С вс-пн по 8-12 часов
-                    График может меняться в зависимости от количества заказов. выходной суббота
-                    Требования: парни, девушки, семейные пары до 35 лет.
-                    Визы от 4-х месяцев, биометрия (полная), карты побыта
-                    Условия: проживание бесплатное, семейные пары живут отдельно, возможно 2 пары в одной комнате
-                    Проезд организован к работе, 100 злотых / месяц
-                    Одежда: ботинки и каска высчитывают с первой зп</p>
-            </div>
-            <div class="mobile_vacansies_item">
-                <img src="/img/stokrotka.png" alt="">
-                <p class="mobile_vacansies-title">stokrotka</p>
-                <p class="mobile_vacansies-subtitle">Teresin, Psary</p>
-                <p class="mobile_vacansies-description">Вид работы: Комплектация продовольственных товаров (сбор заказов
-                    на магазины) с помощью электрических вузиков и сканера.
-                    Возможна работа в холодном отделении +8С
-                    З / П от 13,65 до 23 злотых / час (аккорд) в зависимости от количества сделанных заказов и
-                    скорости выполнения
-                    До 26 лет + 1зл / ч
-                    График работы: С вс-пн по 8-12 часов
-                    График может меняться в зависимости от количества заказов. выходной суббота
-                    Требования: парни, девушки, семейные пары до 35 лет.
-                    Визы от 4-х месяцев, биометрия (полная), карты побыта
-                    Условия: проживание бесплатное, семейные пары живут отдельно, возможно 2 пары в одной комнате
-                    Проезд организован к работе, 100 злотых / месяц
-                    Одежда: ботинки и каска высчитывают с первой зп</p>
-            </div>
-        </div>
-
+        
     </section>
     <section class="map">
 
@@ -309,8 +218,7 @@
     </section>
     <footer class="footer">
         <div class="footer_wrapper">
-            <div class="footer_wrapper-title">Design</div>
-            <div class="footer_wrapper-title">Development</div>
+            <div class="footer_wrapper-title">Design and Development : Leonid Chernishov</div>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"
