--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
             <a class="header_nav-link" href="">Google Map</a>
             <a class="header_nav-link" id="contacts" href="">Контакты
                 <div class="contacts_menu">
-                    <p class="">viber</p>
-                    <p class="">telegram</p>
-                    <p class="">fb</p>
+                    <p class=""> <span>Viber </span>+48 797 871 281</p>
+                    <p class=""> <span>Viber </span>+38 096 620 1098</p>
                 </div>
             </a>
             <a class="header_nav-link" href="">О нас</a>
@@ -183,11 +182,13 @@
                 <div class="message_wrapper-right">
                     <div class="message_wrapper-right--inputs">
                         <input type="text" placeholder="Имя">
-                        <input type="tel" placeholder="Имя">
+                        <input type="tel" placeholder="Телефон">
                         <input type="email" placeholder="Email">
                     </div>
                     <textarea name="" placeholder="Сообщение" id="" cols="30" rows="10"></textarea>
+                    <button class="message_wrapper-right--button">Отправить</button>
                 </div>
+                
             </div>
         </div>
     </section>
@@ -197,9 +198,23 @@
             <div class="cooperation_wrapper-item">
                 <img src="/img/eurocash.png" alt="">
             </div>
-
+            <div class="cooperation_wrapper-item">
+                <img src="/img/tesco.png" alt="">
+            </div>
+            <div class="cooperation_wrapper-item">
+                <img src="/img/cellfast.png" alt="">
+            </div>
+            <div class="cooperation_wrapper-item">
+                <img src="/img/bakoma.png" alt="">
+            </div>
+            <div class="cooperation_wrapper-item">
+                <img src="/img/hopin.png" alt="">
+            </div>
             <div class="cooperation_wrapper-item">
                 <img src="/img/bedrionka.png" alt="">
+            </div>
+            <div class="cooperation_wrapper-item">
+                <img src="/img/helio.png" alt="">
             </div>
 
             <div class="cooperation_wrapper-item">
