--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="vacansies_wrapper">
             <div class="slider">
                 <div class="slider_item">
-                    <img src="/img/stokrotka.png" alt="">
+                    <img src="./img/stokrotka.png" alt="">
                     <p class="slider_item-title">stokrotka</p>
                     <p class="slider_item-subtitle">Teresin, Psary</p>
                     <p class="slider_item-description">Вид работы: Комплектация продовольственных товаров (сбор заказов
