--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="css/main.min.css">
     <link rel="stylesheet" href="css/libs/normalize.css">
-    <link rel="stylesheet" type="text/css" href="/slick/slick.css">
-    <link rel="stylesheet" type="text/css" href="/slick/slick-theme.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -242,8 +242,8 @@
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXBa7oszHKBGlO_zQhcy-oR8uJy1XQ_Lo&callback=initMap&v=weekly"
         async></script>
-    <script src="/js/map.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/map.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
