--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         Одежда: ботинки и каска высчитывают с первой зп</p>
                 </div>
                 <div class="slider_item">
-                    <img src="/img/EUROCASH-logo.png" alt="">
+                    <img src="./img/EUROCASH-logo.png" alt="">
                     <p class="slider_item-title">Eurocash</p>
                     <p class="slider_item-subtitle">Kraków, Stargard, Wrocław,</p>
                     <p class="slider_item-description">
@@ -89,7 +89,7 @@
                         Одежда: ботинки и каска высчитывают с первой зп</p>
                 </div>
                 <div class="slider_item">
-                    <img src="/img/eurocash.png" alt="">
+                    <img src="./img/eurocash.png" alt="">
                     <p class="slider_item-title">Eurocash</p>
                     <p class="slider_item-subtitle">Sosnowiec, Błonie</p>
                     <p class="slider_item-description">
@@ -110,7 +110,7 @@
                     </p>
                 </div>
                 <div class="slider_item">
-                    <img src="/img/bedrionka.png" alt="">
+                    <img src="./img/bedrionka.png" alt="">
                     <p class="slider_item-title">Biedronka</p>
                     <p class="slider_item-subtitle">Mszczonow, Kostrzyn (Poznań)</p>
                     <p class="slider_item-description">Вид работы: Комплектация продовольственных товаров (сбор заказов
@@ -128,7 +128,7 @@
                         Одежда: ботинки и каска высчитывают с первой зп</p>
                 </div>
                 <div class="slider_item">
-                    <img src="/img/bedrionka.png" alt="">
+                    <img src="./img/bedrionka.png" alt="">
                     <p class="slider_item-title">Biedronka</p>
                     <p class="slider_item-subtitle">Wyszków(Warszawa), Gdańsk</p>
                     <p class="slider_item-description">Вид работы: Комплектация продовольственных товаров (сбор заказов
@@ -146,7 +146,7 @@
                         Одежда: ботинки и каска высчитывают с первой зп</p>
                 </div>
                 <div class="slider_item">
-                    <img src="/img/netto.png" alt="">
+                    <img src="./img/netto.png" alt="">
                     <p class="slider_item-title">Netto</p>
                     <p class="slider_item-subtitle">Wrocław, Kobylanka (Szczecin), Teresin</p>
                     <p class="slider_item-description">Вид работы: Комплектация продовольственных товаров (сбор заказов
@@ -196,32 +196,32 @@
         <p class="cooperation_title">Cooperation</p>
         <div class="cooperation_wrapper">
             <div class="cooperation_wrapper-item">
-                <img src="/img/eurocash.png" alt="">
+                <img src="./img/eurocash.png" alt="">
             </div>
             <div class="cooperation_wrapper-item">
-                <img src="/img/tesco.png" alt="">
+                <img src="./img/tesco.png" alt="">
             </div>
             <div class="cooperation_wrapper-item">
-                <img src="/img/cellfast.png" alt="">
+                <img src="./img/cellfast.png" alt="">
             </div>
             <div class="cooperation_wrapper-item">
-                <img src="/img/bakoma.png" alt="">
+                <img src="./img/bakoma.png" alt="">
             </div>
             <div class="cooperation_wrapper-item">
-                <img src="/img/hopin.png" alt="">
+                <img src="./img/hopin.png" alt="">
             </div>
             <div class="cooperation_wrapper-item">
-                <img src="/img/bedrionka.png" alt="">
+                <img src="./img/bedrionka.png" alt="">
             </div>
             <div class="cooperation_wrapper-item">
-                <img src="/img/helio.png" alt="">
+                <img src="./img/helio.png" alt="">
             </div>
 
             <div class="cooperation_wrapper-item">
-                <img src="/img/netto.png" alt="">
+                <img src="./img/netto.png" alt="">
             </div>
             <div class="cooperation_wrapper-item">
-                <img src="/img/stokrotka.png" alt="">
+                <img src="./img/stokrotka.png" alt="">
             </div>
         </div>
     </section>
