--- a/index.html
+++ b/index.html
@@ -238,12 +238,12 @@
     </footer>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-    <script src="/slick/slick.min.js"></script>
+    <script src="./slick/slick.min.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXBa7oszHKBGlO_zQhcy-oR8uJy1XQ_Lo&callback=initMap&v=weekly"
         async></script>
-    <script src="js/map.js"></script>
-    <script src="js/main.js"></script>
+    <script src="./js/map.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
